# CogniLayer

./: .gitignore  CLAUDE.md  README.md  SECURITY-AUDIT.md  config.yaml  diagnose.py  install.py  pyproject.toml
commands/: consolidate.md
commands/cs/: cognihelp.md  consolidate.md  tui.md
commands/en/: cognihelp.md  tui.md
docker/: Dockerfile  docker-compose.yml  requirements-docker.txt  sanitize.py  setup-secure.sh
hooks/: generate_agents_md.py  on_file_change.py  on_session_end.py  on_session_start.py
mcp-server/: db.py  embedder.py  i18n.py  init_db.py  register_codex.py  server.py  utils.py
mcp-server/code/: __init__.py  indexer.py  resolver.py
mcp-server/code/parsers/: base.py  python_parser.py  registry.py
mcp-server/search/: fts_search.py
mcp-server/tools/: code_context.py  code_helpers.py  code_impact.py  code_search.py  consolidate.py  memory_chain.py  memory_delete.py  memory_link.py  memory_search.py  memory_write.py  project_context.py  session_init.py
tests/: conftest.py  test_code_parsers.py  test_code_tools.py  test_multi_cli.py  test_server.py  test_session_bridge.py
tui/: __init__.py  __main__.py  app.py  data.py  demo.py  styles.tcss
tui/screens/: clusters.py  code_graph.py  contradictions.py  facts.py  gaps.py  heatmap.py  overview.py  timeline.py
tui/widgets/: heat_cell.py  stats_card.py
